--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: go-oceanengine-backend
     runtime: go
-    buildCommand: cd backend && go build -o main cmd/proxy/main.go
-    startCommand: cd backend && ./main
+    buildCommand: cd backend && go build -o app cmd/proxy/main.go
+    startCommand: cd backend && ./app
     envVars:
       - key: PROXY_PORT
         value: 8080
